--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="garden-grow-icon" href="%PUBLIC_URL%/beet.ico" type="image/beet-icon"/>
+    <link rel="garden-grow-icon" href="%PUBLIC_URL%/favicon.png" type="image/beet-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="Garden Grow"
       content="Web site for garden enthusiasts to learn more about growing based on the hardiness zone"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/beet.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
